# ComputingPhysics

./: .gitignore  CMakeLists.txt  ComputingPhysics.hpp  README.md
classes/: NumericalScheme.cpp  NumericalScheme.hpp  NumericalSimulation.hpp  Scheme.cpp  Scheme.hpp  Structures.hpp
include/: GeometricObject.hpp  NumericalScheme.hpp  NumericalSimulation.hpp  SpaceUilities.hpp  Utils.hpp
private/: Scheme.hpp
src/: GeometricObject.cpp  NumericalScheme.cpp  NumericalSimulation.cpp  SpaceUtilites.cpp  SpaceUtility.cpp  Utils.cpp
tests/: CMakeLists.txt  main.cpp  testExemple.cpp  testUtils.cpp
tests/functions/: functions.cpp  functions.hpp
